crates/pixi_build_r/src/snapshots/pixi_build_r__tests__pure_r_package_no_compilers.snap
---
source: crates/pixi_build_r/src/main.rs
expression: generated_recipe.recipe
---
schema_version: 1
package:
  name: r-purepkg
  version: 1.0.0
build:
  script:
    content: "[build_script]"
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements:
  host:
    - r-base
  run:
    - r-base
about:
  summary: Pure R Package
extra: {}
